[package]
name = "flight-vis"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.80"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
geo = "0.28.0"
dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11.3"
